--- a/definition.yml
+++ b/definition.yml
@@ -1,5 +1,8 @@
 name: chat
-version: 0.1.0
+version: 1.0.0
 author: gynt
-dependencies: [ protocol >= 0.1.0 ]
-specification-version: 1.0.0
+type: module
+dependencies:
+  protocol: "^1.0.0"
+meta:
+  version: 1.0.0
